--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Le-Double-Jardin_66817
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66817-h/images/cover.jpg
 creator:
   author:
     agent_name: Maeterlinck, Maurice
@@ -11,6 +14,8 @@ creator:
     - https://en.wikipedia.org/wiki/Maurice_Maeterlinck
     - https://fr.wikipedia.org/wiki/Maurice_Maeterlinck
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66817#Le-Double-Jardin
 gutenberg_issued: '2021-11-24'
 identifiers:
   gutenberg: '66817'
